Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-41878

Windows: Wizards don't look like native wizards

XMLWordPrintable

    • Title font: c30ccb0ecdfa08fbadfa8bd40a67a0efb6eaadde (qtbase/5.4, 23.10.2014, 5.4)

      Compare a QWizard to a native wizard. I used the trivialwizard example and Windows' "Add Printer" wizard. You'll notice a bunch of differences:

      • The font in the title bar is too small.
      • The title bar is too high.
      • The Close button (X) is too wide.

      Qt's wizards should look exactly as the native ones.

        1. left.png
          left.png
          7 kB
        2. qtbug41878_wizard_win81.jpg
          qtbug41878_wizard_win81.jpg
          69 kB
        3. right.png
          right.png
          2 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kleint Friedemann Kleint
            rlohning Robert Löhning
            Votes:
            1 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes