Fix title font of Vista-style wizards.

Reverse invalid check.

Task-number: QTBUG-41878
Change-Id: I05015407e5cfad94aca65594962b897a1d0a0cbd
Reviewed-by: Alessandro Portale <alessandro.portale@digia.com>